# tcd

./: .gitignore  DCS-BIOS.md  README.md  riji.rhai
.github/workflows/: build.yaml  release.yaml
MonitorSetup/: tcd_virtual_display.lua
tcd-server/: Cargo.toml  build.rs  controls.json
tcd-server/src/: api_error.rs  buffers.rs  controls.rs  cors.rs  displays.rs  latest.rs  main.rs  mfds.rs  virtual_display.rs  webrtc.rs
tcd-server/src/dcs_bios/: api.rs  control_definitions.rs  controls.rs  mod.rs  stream.rs
tcd-server/src/web_api/: mod.rs
tcd-ui/: index.html  package-lock.json  package.json  rollup.config.js  vite.config.js
tcd-ui/public/: global.css  index.html  manifest.json
tcd-ui/public/fonts/: fonts.css
tcd-ui/src/: app.css  app.svelte  main.js
tcd-ui/src/controls/: push-3way-btn.js  push-btn.js
tcd-ui/src/lib/: api.js  controlsapi.js  errors.js  mfdsapi.js
tcd-ui/src/pages/configuration/: configuration.svelte  displays.svelte
tcd-ui/src/pages/f-16c/: f-16c.svelte  flying-peregrine.svelte  icp.svelte  mfcds.svelte
tcd-ui/src/pages/f-16c/controls/: icp-data-control-switch.js
tcd-ui/src/pages/f-16c/ui/: ded.svelte  dedfont.js  icp-data-control-switch.svelte  icp-key-button.svelte  icp-mode-button.svelte  icp-push-3way-btn.svelte  mfcd-button.svelte  mfcd.svelte
tcd-ui/src/pages/f-18c/: ddis.svelte  f-18c.svelte
tcd-ui/src/pages/f-18c/ui/: ddi-button.svelte  ddi.svelte
tcd-ui/src/ui/: back-btn.svelte  errors.svelte  fullmfds.svelte  pagelist.svelte
virtual-display/: Cargo.toml  virtual_display.h
virtual-display-cpp/: .gitignore  Driver.cpp  Driver.h  Trace.h  debugging.md  virtual-display-cpp.inf  virtual-display-cpp.sln  virtual-display-cpp.vcxproj  virtual-display-cpp.vcxproj.filters
virtual-display/src/: displays.rs  lib.rs  logger.rs  texture_buffer.rs  virtual_display.rs  yuv.rs
virtual-display/test-assets/: rainbow.yuv
