[package]
name = "tcd-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.18", features = ["rt-multi-thread", "macros", "net", "io-util"] }
fire = { package = "fire-http", version = "0.3", features = ["fs", "json", "ws", "http2"] }
fire-api = { package = "fire-http-api", version = "0.2" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple-bytes = "0.2.11"
webrtc = "0.6"
bytes = "1.0"
thiserror = "1.0"
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
openh264 = { version = "0.3", default-features = false, features = ["encoder"] }

[build-dependencies]
dunce = "1.0"

[patch.crates-io]
bytes = { git = "https://github.com/soerenmeier/tokio-bytes" }

[profile.release]
lto = true