[package]
name = "virtual-display"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
parking_lot = "0.12"
crossbeam-utils = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# rayon = "1.5"
indexmap = { version = "1.8", features = ["serde", "rayon"] }
simple-bytes = "0.2.11"

[profile.release]
panic = "abort"
lto = true

[dev-dependencies]
png = "0.17"